--- a/sections/prova-sez.liquid
+++ b/sections/prova-sez.liquid
@@ -13,7 +13,7 @@
   "templates": ["article", "index", "page", "product"],
   "presets": [
     {
-      "name": "prova_sez",
+      "name": "Liquid refrence",
       "category": "reference"
     }
   ]
